@@ -35,6 +35,7 @@ tests_to_skip = {
         ['change_user'] = 'works, but needs to run as root and configured with a valid user',
 	['bug_45167'] = 'works, but mysqltest cant handle errors in change_user',
 	['bug_61998'] = 'works, but needs a real mysql-server',
+	['invalid_response_packets'] = 'currently we have a connection close which we can\'t test with mysqltest',
 }
 
 local build_os = os.getenv("BUILD_OS")
